Fix, changed fixedme tags, with vscode, indentations changes to js format, and vscode validator making strange changes?

--- a/index.html
+++ b/index.html
@@ -1,125 +1,140 @@
-<fixme>
-	<fixme lang="fr">
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tech Returners Surgery: Home</title>
+  </head>
 
-	<fixme>
-    	<fixme charset="UTF-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<fixme>Tech Returners Surgery: Home</fixme>
-	</fixme>
+  <body>
+    <header>
+      <a href="#">Tech Returners Surgery</a>
+      <a href="tel:03330509138">0333 050 9138</a>
+    </header>
 
-	<fixme>
-		<fixme>
-			<a href="#">Tech Returners Surgery</a>
-			<a href="tel:03330509138">0333 050 9138</a>
-		</fixme>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Patient Information</a></li>
+        <li><a href="#">Well-being Centre</a></li>
+      </ul>
+    </nav>
 
-		<fixme>
-			<fixme>
-				<fixme><a href="#">Home</a></fixme>
-				<fixme><a href="#">Services</a></fixme>
-				<fixme><a href="#">Team</a></fixme>
-				<fixme><a href="#">Patient Information</a></fixme>
-				<fixme><a href="#">Well-being Centre</a></fixme>
-			</fixme>
-		</fixme>
+    <label for="site-search">Search...</label>
+    <input
+      type="search"
+      id="site-search"
+      name="search"
+      aria-label="Search through site content"
+    />
+    <button>Search</button>
 
-		<label for="site-search">Search...</label>
-		<input type="search" id="site-search" name="search" aria-label="Search through site content">
-		<fixme>Search</fixme>
+    <section>
+      <h3><strong>COVID Restriction Update</strong></h3>
 
-		<section>
-			<h3><fixme>COVID Restriction Update</fixme></h3>
+      <p>
+        Throughout the pandemic we have strove to make the surgery as safe as
+        possible for all our patients and staff, we will continue to do so.
+      </p>
 
-			<p>Throughout the pandemic we have strove to make the surgery as safe as possible for all our patients and
-				staff, we will continue to do so.</p>
+      <p>
+        From the
+        <em>19th July 2021 nothing will change at the Surgery</em> Patients will
+        <em>still need</em> to wear a mask, socially distance and use hand
+        sanitiser in the surgery and staff will continue to wear PPE.
+      </p>
 
-			<p>From the <fixme>19th July 2021 nothing will change at the Surgery</fixme> Patients will <fixme>still
-					need</fixme> to
-				wear a mask, socially distance and use hand sanitiser in the surgery and staff will continue to
-				wear PPE.
-			</p>
+      <p>
+        If you arrive without a mask and are not exempt, you will be asked to
+        leave.
+      </p>
+    </section>
 
-			<p>If you arrive without a mask and are not exempt, you will be asked to leave.</p>
-		</section>
+    <section>
+      <h1>Welcome to the Tech Returners Surgery!</h1>
 
+      <img src="./surgery.png" />
 
-		<fixme>
-			<fixme>Welcome to the Tech Returners Surgery!</fixme>
+      <address>
+        The Tech Returners Surgery,<br />
+        115 Mancunian Way,<br />
+        Manchester,<br />
+        M20 3PX
+      </address>
+    </section>
 
-			<fixme src="./surgery.png">
+    <section>
+      <h2>How to use Ask My Doc?</h2>
 
-			<fixme> The Tech Returners Surgery,<br>
-				115 Mancunian Way,<br>
-				Manchester,<br>
-				M20 3PX
-			</fixme>
-		</fixme>
+      <video controls width="250">
+        <source src="#" type="video/webm" />
+        <source src="#" type="video/mp4" />
 
-		<section>
-			<h2>How to use Ask My Doc?</h2>
+        <track
+          kind="captions"
+          srclang="en"
+          src="./ask_my_doc_transcript.vtt"
+          default
+        />
 
-			<fixme controls width="250">
-				<source src="#" type="video/webm">
-				<source src="#" type="video/mp4">
+        Sorry, your browser doesn't support embedded videos.
+      </video>
+    </section>
 
-				<track kind="captions" srclang="en" src="./ask_my_doc_transcript.vtt" default />
+    <section>
+      <h2>Need advice or have some feedback for us?</h2>
 
-				Sorry, your browser doesn't support embedded videos.
-			</fixme>
-		</section>
+      <form>
+        <fieldset>
+          <legend>
+            Send us a message by filling out the form below and one of our
+            Receptionists will be in touch:
+          </legend>
 
+          <p>Are you completing this form on behalf of:</p>
 
-		<section>
-			<h2>Need advice or have some feedback for us?</h2>
+          <label for="self">Yourself </label>
+          <input type="checkbox" id="self" name="self" />
 
-			<fixme>
-				<fieldset>
-					<legend>Send us a message by filling out the form below and one of our Receptionists will be in touch:
-					</legend>
+          <label for="another">Someone else </label>
+          <input type="checkbox" id="another" name="another" />
 
-					<p>Are you completing this form on behalf of: </p>
+          <div>
+            <label for="fname">First Name </label>
+            <input type="text" id="fname" name="fname" required />
+          </div>
 
-					<label for="self">Yourself </label>
-					<input type="checkbox" id="self" name="self">
+          <div>
+            <label for="lname">Last Name </label>
+            <input type="text" id="lname" name="lname" required />
+          </div>
 
-					<label for="another">Someone else </label>
-					<input type="checkbox" id="another" name="another">
+          <div>
+            <label for="dob">Date of Birth </label>
+            <input type="date" id="dob" name="dob" required />
+          </div>
 
+          <div>
+            <label for="telephone">Telephone Number: </label>
+            <input type="tel" id="telephone" name="telephone" required />
+          </div>
 
-					<div>
-						<label for="fname">First Name </label>
-						<input type="text" id="fname" name="fname" required>
-					</div>
+          <div>
+            <label for="email">Email: </label>
+            <input type="email" id="email" name="email" required />
+          </div>
 
-					<div>
-						<label for="lname">Last Name </label>
-						<input type="text" id="lname" name="lname" required>
-					</div>
+          <div>
+            <label for="message">Your query or message: </label>
+            <input type="text" id="message" name="message" required />
+          </div>
 
-					<div>
-						<label for="dob">Date of Birth </label>
-						<input type="date" id="dob" name="dob" required>
-					</div>
-
-					<div>
-						<label for="telephone">Telephone Number: </label>
-						<input type="tel" id="telephone" name="telephone" required>
-					</div>
-
-					<div>
-						<label for="email">Email: </label>
-						<input type="email" id="email" name="email" required>
-					</div>
-
-					<div>
-						<label for="message">Your query or message: </label>
-						<input type="text" id="message" name="message" required>
-					</div>
-
-					<input type="submit" value="Submit">
-				</fieldset>
-			</fixme>
-		</fixme>
-	</fixme>
-</fixme>
+          <input type="submit" value="Submit" />
+        </fieldset>
+      </form>
+    </section>
+  </body>
+</html>
