Refactor: tags (emp/strong), img alt and lang

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -42,9 +42,13 @@
 
       <p>
         From the
-        <em>19th July 2021 nothing will change at the Surgery</em> Patients will
-        <em>still need</em> to wear a mask, socially distance and use hand
-        sanitiser in the surgery and staff will continue to wear PPE.
+        <em
+          ><strong>19th July 2021</strong> nothing will change at the
+          Surgery.</em
+        >
+
+        Patients will <em>still need</em> to wear a mask, socially distance and
+        use hand sanitiser in the surgery and staff will continue to wear PPE.
       </p>
 
       <p>
@@ -56,7 +60,7 @@
     <section>
       <h1>Welcome to the Tech Returners Surgery!</h1>
 
-      <img src="./surgery.png" />
+      <img src="./surgery.png" width="250" alt="image of medical equipments" />
 
       <address>
         The Tech Returners Surgery,<br />
